hw1kata's d-f to d-flex

--- a/week1/hw2/pixelperfectkata.html
+++ b/week1/hw2/pixelperfectkata.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <div class="container">
-        <div class="main d-f">
+        <div class="main d-flex">
             <ul>
-                <li class="article d-f">
+                <li class="article d-flex">
                     <img src="https://fakeimg.pl/96x96/" alt="news image">
                     <div class="article-info">
                         <h2>Title Lorem..</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolor inventore sed, voluptas ex delectus.</p>
                     </div>
                 </li>
-                <li class="article d-f">
+                <li class="article d-flex">
                     <img src="https://fakeimg.pl/96x96/" alt="news image">
                     <div class="article-info">
                         <h2>Title Lorem..</h2>
