--- a/week1/hw1/index.html
+++ b/week1/hw1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vito Resume</title>
+    <title>W1_VitoResume</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&display=swap');
