--- a/week2/index.html
+++ b/week2/index.html
@@ -71,23 +71,23 @@
                     </li>
                     <li class="card-container">
                         <div class="card d-flex fd-column gap-4">
-                            <h3 class="fs-20">01</h3>
-                            <h3 class="fs-20">Attention to Detail</h3>
-                            <p>Meticulous code analysis and optimization.</p>
+                            <h3 class="fs-20">02</h3>
+                            <h3 class="fs-20">Adaptability</h3>
+                            <p>Swift learning of new technologies.</p>
                         </div>
                     </li>
                     <li class="card-container">
                         <div class="card d-flex fd-column gap-4">
-                            <h3 class="fs-20">01</h3>
-                            <h3 class="fs-20">Attention to Detail</h3>
-                            <p>Meticulous code analysis and optimization.</p>
+                            <h3 class="fs-20">03</h3>
+                            <h3 class="fs-20">Problem Solver</h3>
+                            <p>Identifying and resolving issues.</p>
                         </div>
                     </li>
                     <li class="card-container">
                         <div class="card d-flex fd-column gap-4">
-                            <h3 class="fs-20">01</h3>
-                            <h3 class="fs-20">Attention to Detail</h3>
-                            <p>Meticulous code analysis and optimization.</p>
+                            <h3 class="fs-20">04</h3>
+                            <h3 class="fs-20">Team Player</h3>
+                            <p>Collaborates and shares ideas.</p>
                         </div>
                     </li>
                 </ol>    
