--- a/week1/hw1/index.html
+++ b/week1/hw1/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W1_VitoResume</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&display=swap');
-    </style>
 </head>
 <body>
     <header class="banner container">
@@ -18,9 +15,7 @@
     <main>
         <div class="self-intro mb-20">
             <div class="container">
-                <div class="width-636 ml-auto">
-                    <p>I'm Vito, a UI Designer with 5+ years of experience. I create visually appealing interfaces for web and mobile apps. Proficient in Sketch, Adobe XD, Figma, HTML, CSS, and JavaScript. I enjoy collaborating with others to create high-quality products.</p>
-                </div>
+                <p class="width-636 ml-auto">I'm Vito, a UI Designer with 5+ years of experience. I create visually appealing interfaces for web and mobile apps. Proficient in Sketch, Adobe XD, Figma, HTML, CSS, and JavaScript. I enjoy collaborating with others to create high-quality products.</p>
             </div>
         </div>
         <div class="info container mb-40">
@@ -29,9 +24,9 @@
                     <h3 class="mb-4">Vito Evans</h3>                    
                     <ul>
                         <li class="mb-2"><a href="#">456 Walnut Avenue, Someville, USA</a></li>
-                        <li class="mb-2"><a href="#">+1 123 456 7890</a></li>
-                        <li class="mb-2"><a href="#">info@hexschool.com</a></li>
-                        <li><a href="#">www.infohexschool.com</a></li>
+                        <li class="mb-2"><a href="tel:+1 123 456 7890">+1 123 456 7890</a></li>
+                        <li class="mb-2"><a href="mailto:info@hexschool.com">info@hexschool.com</a></li>
+                        <li><a href="www.infohexschool.com">www.infohexschool.com</a></li>
 
                     </ul>
                 </section>
