--- a/week1/hw2/pixelperfectkata.html
+++ b/week1/hw2/pixelperfectkata.html
@@ -25,7 +25,9 @@
                     </div>
                 </li>
             </ul>
-            <img src="https://fakeimg.pl/216x216/" alt="adv image">
+            <div class="adv-img d-flex">
+                <img src="https://fakeimg.pl/216x216/" alt="adv image">
+            </div>
         </div>    
     </div>
 
