--- a/week2/index.html
+++ b/week2/index.html
@@ -37,10 +37,10 @@
     <!-- section intro -->
     <section class="intro py-160" style="background-image: url(./img/background-img.png); background-repeat: no-repeat; background-size:cover;">
         <div class="container">
-            <div class="intro-content d-flex jc-sb ai-c">
+            <div class="intro-content d-flex jc-sb ai-c gap-24" >
                 <div class="intro-info">
                     <h2 class="h2-64 color-light pb-36 f-shrink-3">Introduction</h2>
-                    <p class="fs-24 color-light pb-32 f-shrink-3">Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful and responsive websites that provide an optimal user experience.</p>
+                    <p class="fs-24 color-light pb-32">Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful and responsive websites that provide an optimal user experience.</p>
 
                     <div class="sparkle-sm d-flex gap-16">
                     <img src="./img/sparkle-sm.png" alt="sparkle">
