w3 product page update

--- a/week3/pages/index.html
+++ b/week3/pages/index.html
@@ -9,29 +9,29 @@
   <body>
     <%- include('./layout/header'); -%>
     
-    <main class="main-index">
+    <main class="index">
 
       <div class="banner">
-        <div class="container banner-info d-flex fd-column jc-c ai-fe">
+        <div class="container padding-wrapper banner-info d-flex fd-column jc-c ai-fe">
           <h2>Promise-Desert 2020 早春系列</h2>
           <h1>看得清，才能看得遠</h1>
-          <a class="btn btn-banner" href="#">立即購買</a>
+          <a class="btn btn-banner" href="./product_optical.html">立即購買</a>
         </div>
       </div>
 
       <section class="feature ta-c">
-          <div class="container">
+          <div class="container padding-wrapper">
             <h2>用專業的心，做專業的事</h2>
             <ul class="feature-list d-flex jc-sb">
               <li class="feature-card">
-                <div class="feature-content">
+                <div class="feature-item">
                   <img src="../assets/images/home-section2-1.png" alt="price icon">
                   <h3>單一價格</h3>
                   <p class="ta-l">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
                 </div>
 
                 <li class="feature-card">
-                  <div class="feature-content">
+                  <div class="feature-item">
                     <img src="../assets/images/home-section2-2.png" alt="clock icon">
                     <h3>20 分鐘即可取件</h3>
                     <p class="ta-l">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
@@ -39,7 +39,7 @@
                 </li>
 
                 <li class="feature-card">
-                  <div class="feature-content">
+                  <div class="feature-item">
                     <img src="../assets/images/home-section2-3.png" alt="heart icon">
                     <h3>安心售後服務</h3>
                     <p class="ta-l">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
@@ -47,7 +47,7 @@
                 </li>
 
                 <li class="feature-card">
-                  <div class="feature-content">
+                  <div class="feature-item">
                     <img src="../assets/images/home-sectioin2-4.png" alt="lens icon">
                     <h3>關於鏡片</h3>
                     <p class="ta-l">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
@@ -59,25 +59,25 @@
       </section>
 
       <section class="series ta-c">
-        <div class="container">
+        <div class="container padding-wrapper">
           <h2>經典系列鏡框</h2>
             <ul class="series-list d-flex jc-sb ai-c">
               <li class="series-card">
-                <a href="#" class="series-content">
+                <a href="./product_optical.html" class="series-item">
                   <img src="../assets/images/home-section3-1.png" alt="optical image">
                   <h3>OPTICAL</h3>
                 </a>
               </li>
 
               <li class="series-card">
-                <a href="#" class="series-content">
+                <a href="./product_sunglasses.html" class="series-item">
                   <img src="../assets/images/home-section3-2.png" alt="sunglasses image">
                   <h3>SUNGLASSES</h3>
                 </a>
               </li>
 
               <li class="series-card">
-                <a href="#" class="series-content">
+                <a href="#" class="series-item">
                   <img src="../assets/images/home-section3-3.png" alt="functional image">
                   <h3>FUNCTIONAL</h3>
                 </a>
@@ -88,18 +88,18 @@
       </section>
 
       <section class="cobrand ta-c">
-        <div class="container">
+        <div class="container padding-wrapper">
           <h2>聯名設計鏡框</h2>
           <ul class="cobrand-list d-flex jc-sb ai-c">
             <li class="cobrand-card">
-              <a class="cobrand-content">
+              <a class="cobrand-item">
                 <div class="brand-img-doubleA"></div>
                 <h3>DOUBLE A+</h3>
               </a>
             </li>
 
             <li class="cobrand-card">
-              <a class="cobrand-content">
+              <a class="cobrand-item">
                 <div class="brand-img-youth"></div>
                 <h3>YOUTH</h3>
               </a>
@@ -109,15 +109,15 @@
       </section>
 
       <section class="recommend">
-        <div class="container">
+        <div class="container padding-wrapper">
           <h2 class="ta-c">顧客推薦</h2>
           <ul class="recommend-list d-flex jc-sb">
             <li class="recommend-card">
-              <div class="recommend-content d-flex fd-column">
+              <div class="recommend-item d-flex fd-column">
                 <img src="../assets/images/home-section5-1.png" alt="client profile picture">
-                <div class="recommend-text d-flex fd-column jc-sb">
+                <div class="recommend-content d-flex fd-column jc-sb">
                   <div class="recommend-main">
-                    <span>Jessy</span>
+                    <h4>Jessy</h4>
                   <p>眼鏡品質優良，下次還會想來這邊購買！</p>
                   </div>
                   <time>2021/06/20</time>
@@ -126,11 +126,11 @@
             </li>
 
             <li class="recommend-card">
-              <div class="recommend-content d-flex fd-column">
+              <div class="recommend-item d-flex fd-column">
                 <img src="../assets/images/home-section5-2.png" alt="client profile picture">
-                <div class="recommend-text d-flex fd-column jc-sb">
+                <div class="recommend-content d-flex fd-column jc-sb">
                   <div class="recommend-main">
-                    <span>凱倫</span>
+                    <h4>凱倫</h4>
                   <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
                   </div>
                   <time>2021/04/18</time>
@@ -139,11 +139,11 @@
             </li>
 
             <li class="recommend-card">
-              <div class="recommend-content d-flex fd-column">
+              <div class="recommend-item d-flex fd-column">
                 <img src="../assets/images/home-section5-3.png" alt="client profile picture">
-                <div class="recommend-text d-flex fd-column jc-sb">
+                <div class="recommend-content d-flex fd-column jc-sb">
                   <div class="recommend-main">
-                    <span>悠悠</span>
+                    <h4>悠悠</h4>
                   <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
                   </div>
                   <time>2020/12/25</time>
@@ -152,11 +152,11 @@
             </li>
 
             <li class="recommend-card">
-              <div class="recommend-content d-flex fd-column">
+              <div class="recommend-item d-flex fd-column">
                 <img src="../assets/images/home-section5-4.png" alt="client profile picture">
-                <div class="recommend-text d-flex fd-column jc-sb">
+                <div class="recommend-content d-flex fd-column jc-sb">
                   <div class="recommend-main">
-                    <span>Kyuan</span>
+                    <h4>Kyuan</h4>
                   <p>服務很好，品質沒有任何問題，非常喜歡。</p>
                   </div>
                   <time>2020/10/31</time>
@@ -170,7 +170,7 @@
       </section>
 
       <section class="contact">
-        <div class="container">
+        <div class="container padding-wrapper">
           <h2 class="ta-c">聯絡我們</h2>
           <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
 
