w3 edit heading tag for product pages

--- a/week3/pages/product_optical.html
+++ b/week3/pages/product_optical.html
@@ -22,8 +22,8 @@
       <div class="series-product optical-product container">
         
         <div class="series-title">
-          <h2>2020 NEW COLLECTION</h2>
-          <h3>賽璐珞鈦金屬混合鏡框</h3>
+          <h1>Celluloid Combi</h1>
+          <h2>賽璐珞鈦金屬混合鏡框</h2>
         </div>
         
 
