--- a/week3/pages/product_sunglasses.html
+++ b/week3/pages/product_sunglasses.html
@@ -22,8 +22,8 @@
       <div class="series-product sunglasses-product container">
         
         <div class="series-title">
-          <h2>Celluloid Combi</h2>
-          <h3>賽璐珞鈦金屬混合鏡框</h3>
+          <h1>2020 NEW COLLECTION</h1>
+          <h2>賽璐珞鈦金屬混合鏡框</h2>
         </div>
         
 
