--- a/week3/pages/index.html
+++ b/week3/pages/index.html
@@ -23,31 +23,31 @@
           <div class="container padding-wrapper">
             <h2>用專業的心，做專業的事</h2>
             <ul class="feature-list d-flex jc-sb">
-              <li class="feature-card">
-                <div class="feature-item">
+              <li class="feature-item">
+                <div class="feature-card">
                   <img src="../assets/images/home-section2-1.png" alt="price icon">
                   <h3>單一價格</h3>
                   <p class="ta-l">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
                 </div>
 
-                <li class="feature-card">
-                  <div class="feature-item">
+                <li class="feature-item">
+                  <div class="feature-card">
                     <img src="../assets/images/home-section2-2.png" alt="clock icon">
                     <h3>20 分鐘即可取件</h3>
                     <p class="ta-l">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
                   </div>
                 </li>
 
-                <li class="feature-card">
-                  <div class="feature-item">
+                <li class="feature-item">
+                  <div class="feature-card">
                     <img src="../assets/images/home-section2-3.png" alt="heart icon">
                     <h3>安心售後服務</h3>
                     <p class="ta-l">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
                   </div>
                 </li>
 
-                <li class="feature-card">
-                  <div class="feature-item">
+                <li class="feature-item">
+                  <div class="feature-card">
                     <img src="../assets/images/home-sectioin2-4.png" alt="lens icon">
                     <h3>關於鏡片</h3>
                     <p class="ta-l">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
@@ -62,22 +62,22 @@
         <div class="container padding-wrapper">
           <h2>經典系列鏡框</h2>
             <ul class="series-list d-flex jc-sb ai-c">
-              <li class="series-card">
-                <a href="./product_optical.html" class="series-item">
+              <li class="series-item">
+                <a href="./product_optical.html" class="series-card">
                   <img src="../assets/images/home-section3-1.png" alt="optical image">
                   <h3>OPTICAL</h3>
                 </a>
               </li>
 
-              <li class="series-card">
-                <a href="./product_sunglasses.html" class="series-item">
+              <li class="series-item">
+                <a href="./product_sunglasses.html" class="series-card">
                   <img src="../assets/images/home-section3-2.png" alt="sunglasses image">
                   <h3>SUNGLASSES</h3>
                 </a>
               </li>
 
-              <li class="series-card">
-                <a href="#" class="series-item">
+              <li class="series-item">
+                <a href="#" class="series-card">
                   <img src="../assets/images/home-section3-3.png" alt="functional image">
                   <h3>FUNCTIONAL</h3>
                 </a>
@@ -91,15 +91,15 @@
         <div class="container padding-wrapper">
           <h2>聯名設計鏡框</h2>
           <ul class="cobrand-list d-flex jc-sb ai-c">
-            <li class="cobrand-card">
-              <a class="cobrand-item">
+            <li class="cobrand-item">
+              <a class="cobrand-card">
                 <div class="brand-img-doubleA"></div>
                 <h3>DOUBLE A+</h3>
               </a>
             </li>
 
-            <li class="cobrand-card">
-              <a class="cobrand-item">
+            <li class="cobrand-item">
+              <a class="cobrand-card">
                 <div class="brand-img-youth"></div>
                 <h3>YOUTH</h3>
               </a>
@@ -112,8 +112,8 @@
         <div class="container padding-wrapper">
           <h2 class="ta-c">顧客推薦</h2>
           <ul class="recommend-list d-flex jc-sb">
-            <li class="recommend-card">
-              <div class="recommend-item d-flex fd-column">
+            <li class="recommend-item">
+              <div class="recommend-card d-flex fd-column">
                 <img src="../assets/images/home-section5-1.png" alt="client profile picture">
                 <div class="recommend-content d-flex fd-column jc-sb">
                   <div class="recommend-main">
@@ -125,8 +125,8 @@
               </div>
             </li>
 
-            <li class="recommend-card">
-              <div class="recommend-item d-flex fd-column">
+            <li class="recommend-item">
+              <div class="recommend-card d-flex fd-column">
                 <img src="../assets/images/home-section5-2.png" alt="client profile picture">
                 <div class="recommend-content d-flex fd-column jc-sb">
                   <div class="recommend-main">
@@ -138,8 +138,8 @@
               </div>
             </li>
 
-            <li class="recommend-card">
-              <div class="recommend-item d-flex fd-column">
+            <li class="recommend-item">
+              <div class="recommend-card d-flex fd-column">
                 <img src="../assets/images/home-section5-3.png" alt="client profile picture">
                 <div class="recommend-content d-flex fd-column jc-sb">
                   <div class="recommend-main">
@@ -151,8 +151,8 @@
               </div>
             </li>
 
-            <li class="recommend-card">
-              <div class="recommend-item d-flex fd-column">
+            <li class="recommend-item">
+              <div class="recommend-card d-flex fd-column">
                 <img src="../assets/images/home-section5-4.png" alt="client profile picture">
                 <div class="recommend-content d-flex fd-column jc-sb">
                   <div class="recommend-main">
