--- a/week3/pages/product_sunglasses.html
+++ b/week3/pages/product_sunglasses.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>眼鏡官網</title>
+    <title>Sunglasses系列</title>
   </head>
   <body>
     <%- include('./layout/header'); -%>
@@ -27,10 +27,10 @@
         </div>
         
 
-        <div class="product sunglasses-product container">
+        <div class="product-container sunglasses-product container padding-wrapper">
           <ul class="product-list d-flex jc-fs f-wrap">
-            <li class="product-card col-4 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-4 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img7"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -45,8 +45,8 @@
               </div>
             </li>
 
-            <li class="product-card col-4 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-4 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img8"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -61,8 +61,8 @@
               </div>
             </li>
 
-            <li class="product-card col-4 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-4 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img9"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -77,8 +77,8 @@
               </div>
             </li>
 
-            <li class="product-card col-4 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-4 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img10"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -93,8 +93,8 @@
               </div>
             </li>
 
-            <li class="product-card col-4 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-4 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img11"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -109,8 +109,8 @@
               </div>
             </li>
 
-            <li class="product-card col-4 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-4 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img12"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
