--- a/week3/pages/product_optical.html
+++ b/week3/pages/product_optical.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>眼鏡官網</title>
+    <title>Optical系列</title>
   </head>
   <body>
     <%- include('./layout/header'); -%>
@@ -27,10 +27,10 @@
         </div>
         
 
-        <div class="product optical-product container">
+        <div class="product-container optical-product container padding-wrapper">
           <ul class="product-list d-flex jc-fs f-wrap">
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img1"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -45,8 +45,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img2"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -61,8 +61,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img3"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -77,8 +77,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img4"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -93,8 +93,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img5"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -109,8 +109,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img6"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -125,8 +125,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img1"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -141,8 +141,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img2"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -157,8 +157,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img3"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -173,8 +173,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img4"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -189,8 +189,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img5"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
@@ -205,8 +205,8 @@
               </div>
             </li>
 
-            <li class="product-card col-3 col-md-6 col-sm-12">
-              <a href="#" class="product-item">
+            <li class="product-item col-3 col-md-6 col-sm-12">
+              <a href="#" class="product-card">
                 <div class="product-img product-img6"></div>
                 <div class="product-content d-flex fd-column">
                   <div class="product-info d-flex jc-sb ai-c">
