--- a/store_1.html
+++ b/store_1.html
@@ -16,10 +16,10 @@
             <img src="/2024-web-layout-training-mhw/assets/logo-white-5423463a.png" alt="brand logo">
         </a>
         <ul class="nav d-flex">
-            <li class="nav-item"><a href="pages\product_optical.html">系列鏡框</a></li>
-            <li class="nav-item"><a href="pages\stores.html">門市據點</a></li>
-            <li class="nav-item"><a href="pages\blog.html">部落格</a></li>
-            <li class="nav-item"><a href="pages\faq.html">常見問題</a></li>
+            <li class="nav-item"><a href="./pages/product_optical.html">系列鏡框</a></li>
+            <li class="nav-item"><a href="./pages/stores.html">門市據點</a></li>
+            <li class="nav-item"><a href="./pages/blog.html">部落格</a></li>
+            <li class="nav-item"><a href="./pages/faq.html">常見問題</a></li>
         </ul>
     </div>
 </header>    
