--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header py-4">
     <div class="container padding-wrapper d-flex jc-sb ai-c">
         
-        <a href="../pages/index.html" class="logo mr-auto">
+        <a href="index.html" class="logo mr-auto">
             <img src="/2024-web-layout-training-mhw/assets/logo-white-5423463a.png" alt="brand logo">
         </a>
         <ul class="nav d-flex">
@@ -29,7 +29,7 @@
         <div class="container padding-wrapper banner-info d-flex fd-column jc-c ai-fe">
           <h2>Promise-Desert 2020 早春系列</h2>
           <h1>看得清，才能看得遠</h1>
-          <a class="btn btn-banner" href="./product_optical.html">立即購買</a>
+          <a class="btn btn-banner" href="product_optical.html">立即購買</a>
         </div>
       </div>
 
@@ -227,11 +227,11 @@
         <div class="footer-content d-flex jc-sb ai-fs">
             <div class="footer-info d-flex fd-column ai-fs">
                 <ul class="nav d-flex ai-c">
-                    <li class="nav-item"><a href="../pages/index.html">首頁</a></li>
-                    <li class="nav-item"><a href="../pages/product_optical.html">系列鏡框</a></li>
-                    <li class="nav-item"><a href="../pages/stores.html">門市據點</a></li>
-                    <li class="nav-item"><a href="../pages/blog.html">部落格</a></li>
-                    <li class="nav-item"><a href="../pages/faq.html">常見問題</a></li>
+                    <li class="nav-item"><a href="index.html">首頁</a></li>
+                    <li class="nav-item"><a href="product_optical.html">系列鏡框</a></li>
+                    <li class="nav-item"><a href="stores.html">門市據點</a></li>
+                    <li class="nav-item"><a href="blog.html">部落格</a></li>
+                    <li class="nav-item"><a href="faq.html">常見問題</a></li>
                 </ul>
                 <div class="footer-contact d-flex fd-column ai-fs">
                     <a href="tel:+0800-000-000" class="d-flex ai-c pb-2">
