--- a/blog_pg1.html
+++ b/blog_pg1.html
@@ -12,7 +12,7 @@
     <header class="header py-4">
     <div class="container padding-wrapper d-flex jc-sb ai-c">
         
-        <a href="../pages/index.html" class="logo mr-auto">
+        <a href="index.html" class="logo mr-auto">
             <img src="/2024-web-layout-training-mhw/assets/logo-white-5423463a.png" alt="brand logo">
         </a>
         <ul class="nav d-flex">
@@ -26,7 +26,7 @@
     <div class="container padding-wrapper">
         <ul class="nav-sub-list  d-flex jc-sb ai-c">
             <li class="nav-sub-item"><a href="#">最新消息</a></li>
-            <li class="nav-sub-item"><a href="../pages/blog_pg1.html">特別企劃</a></li>
+            <li class="nav-sub-item"><a href="blog_pg1.html">特別企劃</a></li>
             <li class="nav-sub-item"><a href="#">新品上市</a></li>
             <li class="nav-sub-item"><a href="#">鏡框小知識</a></li>
             <li class="blog-searcher ml-auto"><a href="#"><span class="material-symbols-outlined">search</span></a></li>
@@ -37,8 +37,8 @@
     <main class="blog-article container padding-wrapper">
 
       <ol class="page-path d-flex ai-c">
-        <li><a href="../pages/index.html">首頁</a></li>
-        <li><a href="../pages/blog.html">部落格</a></li>
+        <li><a href="./pages/index.html">首頁</a></li>
+        <li><a href="./pages/blog.html">部落格</a></li>
         <li><a href="../pages/blog.html">特別企劃</a></li>
         <li><a class="page-path-current" href="#">情人特別企劃</a></li>
       </ol>
@@ -148,11 +148,11 @@
         <div class="footer-content d-flex jc-sb ai-fs">
             <div class="footer-info d-flex fd-column ai-fs">
                 <ul class="nav d-flex ai-c">
-                    <li class="nav-item"><a href="../pages/index.html">首頁</a></li>
-                    <li class="nav-item"><a href="../pages/product_optical.html">系列鏡框</a></li>
-                    <li class="nav-item"><a href="../pages/stores.html">門市據點</a></li>
-                    <li class="nav-item"><a href="../pages/blog.html">部落格</a></li>
-                    <li class="nav-item"><a href="../pages/faq.html">常見問題</a></li>
+                    <li class="nav-item"><a href="index.html">首頁</a></li>
+                    <li class="nav-item"><a href="product_optical.html">系列鏡框</a></li>
+                    <li class="nav-item"><a href="stores.html">門市據點</a></li>
+                    <li class="nav-item"><a href="blog.html">部落格</a></li>
+                    <li class="nav-item"><a href="faq.html">常見問題</a></li>
                 </ul>
                 <div class="footer-contact d-flex fd-column ai-fs">
                     <a href="tel:+0800-000-000" class="d-flex ai-c pb-2">
