--- a/stores.html
+++ b/stores.html
@@ -69,7 +69,7 @@
                     <span>地址：台北市中山區南京東路25巷2-1號</span>
                   </li>
                 </ul>
-                <a href="./store_1.html" class="btn store-btn mt-auto">詳細資訊</a>
+                <a href="store_1.html" class="btn store-btn mt-auto">詳細資訊</a>
               </div>
             </li>
   
