--- a/blog_pg1.html
+++ b/blog_pg1.html
@@ -37,9 +37,9 @@
     <main class="blog-article container padding-wrapper">
 
       <ol class="page-path d-flex ai-c">
-        <li><a href="./pages/index.html">首頁</a></li>
-        <li><a href="./pages/blog.html">部落格</a></li>
-        <li><a href="../pages/blog.html">特別企劃</a></li>
+        <li><a href="index.html">首頁</a></li>
+        <li><a href="pages/blog.html">部落格</a></li>
+        <li><a href="/pages/blog.html">特別企劃</a></li>
         <li><a class="page-path-current" href="#">情人特別企劃</a></li>
       </ol>
 
