--- a/week3/pages/stores.html
+++ b/week3/pages/stores.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="container padding-wrapper">
-        <div class="store-container ">
+        <div class="store-container">
           <ul class="store-list d-flex jc-fs f-wrap">       
             
             <li class="store-item col-4 col-md-6 col-sm-12">
@@ -55,7 +55,7 @@
                     <span>地址：台北市中山區南京東路25巷2-1號</span>
                   </li>
                 </ul>
-                <a href="../pages/store_1.html" class="btn store-btn mt-auto">詳細資訊</a>
+                <a href="store_1.html" class="btn store-btn mt-auto">詳細資訊</a>
               </div>
             </li>
   
