--- a/week3/pages/index.html
+++ b/week3/pages/index.html
@@ -15,7 +15,7 @@
         <div class="container padding-wrapper banner-info d-flex fd-column jc-c ai-fe">
           <h2>Promise-Desert 2020 早春系列</h2>
           <h1>看得清，才能看得遠</h1>
-          <a class="btn btn-banner" href="./product_optical.html">立即購買</a>
+          <a class="btn btn-banner" href="product_optical.html">立即購買</a>
         </div>
       </div>
 
