w4 inpute type change

--- a/week3/pages/index.html
+++ b/week3/pages/index.html
@@ -183,12 +183,12 @@
 
               <li>
                 <label for="phone" class="contact-form-label">聯絡電話</label>
-                <input type="text" id="name" placeholder="0912-345-678" class="contact-form-input">
+                <input type="tel" id="name" placeholder="0912-345-678" class="contact-form-input">
               </li>
 
               <li>
                 <label for="email" class="contact-form-label">電子郵件</label>
-                <input type="text" id="name" placeholder="example@email.com" class="contact-form-input">
+                <input type="email" id="name" placeholder="example@email.com" class="contact-form-input">
               </li>
 
               <li>
