--- a/week3/pages/index.html
+++ b/week3/pages/index.html
@@ -182,7 +182,7 @@
               </li>
 
               <li>
-                <label for="phone" class="contact-form-label">聯絡電話</label>
+                <label for="phone" class="contact-form-label" pattern="[0-9]{4}-[0-9]{3}-[0-9]{3}">聯絡電話</label>
                 <input type="tel" id="name" placeholder="0912-345-678" class="contact-form-input">
               </li>
 
