--- a/week3/pages/index.html
+++ b/week3/pages/index.html
@@ -197,7 +197,7 @@
               </li>
 
               <li class="contact-checkbox-agree">
-                <input type="checkbox" id="policy-agree" name="policy agreement">
+                <input type="checkbox" id="policy-agree" name="policy agreement" value="agree">
                 <label for="policy-agree">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
               </li>
             </ul>
