--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>眼鏡官網</title>
-    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-6b9e266d.js"></script>
-    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-bbb62ad8.css">
+    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-5fe43c98.js"></script>
+    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-c015994d.css">
   </head>
   <body>
     <header class="header py-4">
@@ -191,17 +191,17 @@
           <form class="contact-form" action="">
             <ul>
               <li>
-                <label for="name" class="contact-form-label">姓名</label>
+                <label for="name" class="contact-form-label" required>姓名</label>
                 <input type="text" id="name" name="name" placeholder="陳小明" class="contact-form-input">
               </li>
 
               <li>
-                <label for="phone" class="contact-form-label" pattern="[0-9]{4}-[0-9]{3}-[0-9]{3}">聯絡電話</label>
+                <label for="phone" class="contact-form-label">聯絡電話</label>
                 <input type="tel" id="phone" name="phone" placeholder="0912-345-678" class="contact-form-input">
               </li>
 
               <li>
-                <label for="email" class="contact-form-label">電子郵件</label>
+                <label for="email" class="contact-form-label" required>電子郵件</label>
                 <input type="email" id="email" name="email" placeholder="example@email.com" class="contact-form-input">
               </li>
 
@@ -211,7 +211,7 @@
               </li>
 
               <li class="contact-checkbox-agree">
-                <input type="checkbox" id="policy-agree" name="policy agreement" value="agree">
+                <input type="checkbox" id="policy-agree" name="policy agreement" value="agree" required >
                 <label for="policy-agree">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
               </li>
             </ul>
