w4 edit grid system by adding .row

--- a/week3/pages/blog.html
+++ b/week3/pages/blog.html
@@ -10,19 +10,22 @@
     <%- include('./layout/header'); -%>
     <%- include('./layout/nav_sub'); -%>
     
-    <main class="blog blog-post container padding-wrapper">
+    <main class="blog blog-post">
 
-      <h1 class="page-title">部落格</h1>
+      <div class="container padding-wrapper">
+        <h1 class="page-title container padding-wrapper">部落格</h1>
+      </div>
 
-      <div class="blog-post-container">
+      <div class="blog-post-container padding-wrapper">
         <ul class="blog-post-list d-flex fd-column">
 
           <li class="blog-post-item">
-            <div class="blog-post-card d-flex jc-sb ">
+            <div class="blog-post-card row d-flex jc-sb ">
               <a class="blog-post-img col-6 col-sm-12 d-flex" href="blog_pg1.html"><img src="../assets/images/blog-1.png" alt="blog-post image"></a>
               <div class="blog-post-content d-flex fd-column col-6 col-sm-12">
+
                 <div class="blog-post-title d-flex jc-sb ai-fe">
-                  <div class="df fd-column ai-fs">
+                  <div class="blog-post-heading">
                     <h2><a href="blog_pg1.html">情人特別企劃</a></h2>
                     <h3>2020 Valentine’s Special</h3>
                   </div>
@@ -35,11 +38,12 @@
           </li>
 
           <li class="blog-post-item">
-            <div class="blog-post-card d-flex jc-sb ">
+            <div class="blog-post-card row d-flex jc-sb ">
               <a class="blog-post-img d-flex col-6 col-sm-12" href="#"><img src="../assets/images/blog-2.png" alt="blog-post image"></a>
               <div class="blog-post-content d-flex fd-column col-6 col-sm-12">
+                
                 <div class="blog-post-title d-flex jc-sb ai-fe">
-                  <div class="df fd-column ai-fs">
+                  <div class="blog-post-heading">
                     <h2><a href="#">街頭潮人訪問</a></h2>
                     <h3>Street Interview</h3>
                   </div>
@@ -52,11 +56,12 @@
           </li>
 
           <li class="blog-post-item">
-            <div class="blog-post-card d-flex jc-sb ">
+            <div class="blog-post-card row d-flex jc-sb ">
               <a class="blog-post-img d-flex col-6 col-sm-12" href="#"><img src="../assets/images/blog-3.png" alt="blog-post image"></a>
               <div class="blog-post-content d-flex fd-column col-6 col-sm-12">
+
                 <div class="blog-post-title d-flex jc-sb ai-fe">
-                  <div class="df fd-column ai-fs">
+                  <div class="blog-post-heading">
                     <h2><a href="#">春季新品上市</a></h2>
                     <h3>New Selection</h3>
                   </div>
@@ -69,11 +74,12 @@
           </li>
 
           <li class="blog-post-item">
-            <div class="blog-post-card d-flex jc-sb ">
+            <div class="blog-post-card row d-flex jc-sb ">
               <a class="blog-post-img d-flex col-6 col-sm-12" href="#"><img src="../assets/images/blog-4.png" alt="blog-post image"></a>
               <div class="blog-post-content d-flex fd-column col-6 col-sm-12">
+
                 <div class="blog-post-title d-flex jc-sb ai-fe">
-                  <div class="df fd-column ai-fs">
+                  <div class="blog-post-heading">
                     <h2><a href="#">設計師獨享鏡框優惠</a></h2>
                     <h3>Sales for Designer</h3>
                   </div>
@@ -86,11 +92,12 @@
           </li>
 
           <li class="blog-post-item">
-            <div class="blog-post-card d-flex jc-sb ">
+            <div class="blog-post-card row d-flex jc-sb ">
               <a class="blog-post-img d-flex col-6 col-sm-12" href="#"><img src="../assets/images/blog-5.png" alt="blog-post image"></a>
               <div class="blog-post-content d-flex fd-column col-6 col-sm-12">
+
                 <div class="blog-post-title d-flex jc-sb ai-fe">
-                  <div class="df fd-column ai-fs">
+                  <div class="blog-post-heading">
                     <h2><a href="#">抵抗夏日大作戰</a></h2>
                     <h3>Summer Special</h3>
                   </div>
