--- a/week3/pages/faq.html
+++ b/week3/pages/faq.html
@@ -9,14 +9,14 @@
   <body>
     <%- include('./layout/header'); -%>
     
-    <main class="faq container padding-wrapper">
+    <main class="faq">
 
-      <div class="faq-content ">
+      <div class="faq-content container padding-wrapper">
         <h1 class="page-title">常見問題</h1>
       
         <h2>我想詢問配鏡問題</h2>
 
-        <ol class="faq-list">
+        <ol class="faq-list row">
           <li class="col-8 col-md-12 col-sm-12">
             <h3>Q1.請問可否自備鏡框單配鏡片？</h3>
             <p>
