--- a/week3/pages/store_1.html
+++ b/week3/pages/store_1.html
@@ -29,7 +29,7 @@
 
       <div class="container padding-wrapper">
         <div class="store-container">
-          <div class="store-flex d-flex jc-sb f-wrap">       
+          <div class="store-flex row d-flex jc-sb f-wrap">       
             
             <div class="store-item col-5 col-md-12 col-sm-12">
               <div class="store-card d-flex fd-column">
