--- a/week3/pages/stores.html
+++ b/week3/pages/stores.html
@@ -27,7 +27,7 @@
 
       <div class="container padding-wrapper">
         <div class="store-container">
-          <ul class="store-list d-flex jc-fs f-wrap">       
+          <ul class="store-list row d-flex jc-fs f-wrap">       
             
             <li class="store-item col-4 col-md-6 col-sm-12">
               <div class="store-card d-flex fd-column">
